# DWM-Decorator

./: .gitignore  Cargo.toml  README.md
src/: configuration.rs  default_config.toml  main.rs
