[package]
name = "DWM-Decorator"
version = "0.1.0"
edition = "2024"

[dependencies]
config = "0.15.19"
csscolorparser = { version = "0.8.3" ,features = ["default","serde"]}
serde = { version = "1.0.228" , features = ["derive"]}
windows = { version = "0.62.2" , features = ["Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Dwm",
    "Win32_UI_Accessibility",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Threading"
]}

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
